[package]
name = "fft"
version = "0.1.0"
authors = ["Jeron Aldaron Lau <jeronlau@plopgrizzly.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pitch = { path = "../pitch" }
chfft = "0.3"
num-complex = "0.2"
adi = { version = "0.12", default-features = false, features = ["speaker"] }
twang = {path = "../twang"}

[dev-dependencies]
opus-no = {path = "../../libcala/opus-no"}
# cala_web = "0.0"
